<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <!--main activity menus-->

    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>


    <string name="text_Compass">Compass</string>
    <string name="compass_dial">Compass Dial</string>
    <string name="compass_hands">Compass Hands</string>
    <string name="compass_dialog_header">Info</string>
    <string name="compass_dialog_description">Your mobile does not support Compass</string>
    <string name="compass_dialog_confirm">OK</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test_maps">Map</string>


    <string name="app_name">EntermAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Home</string>
    <string name="menu_slideshow">Home</string>
    <string name="menu_tools">Home</string>
    <string name="menu_send">Home</string>
    <string name="menu_home4">Home</string>


    <string name="menu_destination">Destination</string>
    <string name="menu_my_trips">My trips</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_share">Share</string>
    <string name="menu_sign_out">Sign out</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps2">Map</string>

</resources>
