<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_destinations"
            android:icon="@drawable/ic_location_city_black"
            android:title="@string/menu_destination" />
        <item
            android:id="@+id/nav_my_trips"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/menu_my_trips" />
        <item
            android:id="@+id/nav_utilities"
            android:icon="@drawable/ic_utilities"
            android:title="@string/menu_utilities" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
